Added custom express backend integrated with mongoDB.

--- a/client/styles/SignUp.module.css
+++ b/client/styles/SignUp.module.css
@@ -1,11 +1,11 @@
-.loginWrap {
+.signUpWrap {
     height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.formSignIn {
+.formSignUp {
     text-align: center;
     background-color: black;
     max-width: 300px;
