--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -9,14 +9,15 @@
 	src: url("../public/text/hotpizza.ttf");
 }
 .heading{
-	font-family: 'croissaintfont';
-	margin: 5px;
-	
+
+  margin: 5px;
+  color:#40E0D0;
+	cursor: pointer;
 }
+
 .container {
-	background-image: url("../public/images/food_bg.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
+
+	background-color: #008080;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -147,14 +148,15 @@
 	padding: 10px;
 font-size: 20px;
 margin:7px;
+width: 150px;
+height: 65px;
+border-radius: 10px;
+text-align: center;
+font-size: 30px;
 
-	 transition:all .3s ease-out; 
+
 }
 
-.button:hover{
-	font-family: 'pizzafont';
-	color: black;
-}
 
 
 
@@ -162,8 +164,7 @@ margin:7px;
 .homeWrap{
 	text-align: center;
 	
-	background-image: url("../public/images/wooden_button.jpg");
-	box-shadow: 10px 20px #888888;
+
 	width: 350px;
 	padding: 10px;
 	padding: 20px;
