--- a/client/styles/Layout.module.css
+++ b/client/styles/Layout.module.css
@@ -2,12 +2,14 @@
     border-bottom: 1px solid #E2E8F0;
 }
 
+
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1.5rem;
-    background-color: #ccb086;
+    background-color: white;
 }
 
 .hamburger {
@@ -38,13 +40,13 @@
 .navlink{
     font-size: 20px;
     font-weight: 400;
-    color: #6d3406;
+    color: #008080;
     text-transform: uppercase;
     text-decoration: none;
 }
 
 .navlink:hover{
-    color: #c75d07;
+    color: #008080;
 }
 
 .navlogo {
