--- a/client/styles/Login.module.css
+++ b/client/styles/Login.module.css
@@ -8,19 +8,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #cddee5;
+    background-color:#008080;
 }
 
-.heading{
-    font-family: 'pizzafont';
-}
+
 
 .formSignInWrapper {
     text-align: center;
-    background-image: url("../public/images/wooden_button.jpg");
-    
-    box-shadow: 10px 20px #888888;
-    
+    border: solid 15px #40E0D0;
+    border-radius: 40px;
+    background-color: white;
     padding: 20px;
     
     margin: 0 auto;
@@ -29,12 +26,24 @@
     background-color: white;
     display: inline-block;
     padding-top: 50px;
-    border-right: solid 1px gray;
     vertical-align: text-top;
     align-items: center;
     justify-content: center;
     width: 550px;
     height: 550px;
+}
+
+.button1{
+    font-size: 30px;
+    background-color:#008080; 
+    color:  white;
+    border-radius: 10px;
+    width: 150px;
+    height: 70px;
+}
+.button1:hover{
+    background-color: #40E0D0 ;
+    color:white  ;
 }
 
 
