--- a/client/styles/SignUp.module.css
+++ b/client/styles/SignUp.module.css
@@ -1,24 +1,27 @@
-.signUpWrap {
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.formSignUp {
-    text-align: center;
-    background-color: black;
-    max-width: 300px;
-    padding: 15px;
-    margin: 0 auto;
-}
 
 .formLabel{
     color:white;
     margin: 5px;
 }
 
+.button1{
+    font-size: 30px;
+    background-color:#008080; 
+    color:  white;
+    border-radius: 10px;
+    width: 150px;
+    height: 70px;
+}
+.button1:hover{
+    background-color: #40E0D0 ;
+    color:white  ;
+}
+
 .errors{
     color: red;
     font-size: small;
 }
+
+
+
