--- a/client/styles/Login.module.css
+++ b/client/styles/Login.module.css
@@ -10,6 +10,10 @@
     justify-content: center;
     background-color:#008080;
 }
+.login{
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
 
 
 
@@ -33,17 +37,33 @@
     height: 550px;
 }
 
-.button1{
-    font-size: 30px;
-    background-color:#008080; 
-    color:  white;
-    border-radius: 10px;
-    width: 150px;
-    height: 70px;
+@media only screen and (min-width:768px)
+{
+    .button1{
+        font-size: 30px;
+        background-color:#008080; 
+        color:  white;
+        border-radius: 10px;
+        width: 150px;
+        height: 70px;
+    }
 }
+@media only screen and (max-width:768px)
+{
+    .button1{
+        font-size: 20px;
+        background-color:#008080; 
+        color:  white;
+        border-radius: 10px;
+        width: 100px;
+        height: 50px;
+    }
+}
+
+
 .button1:hover{
     background-color: #40E0D0 ;
-    color:white  ;
+    color:#008080 ;
 }
 
 
