--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -5,7 +5,7 @@
 }
 
 html,body, body * { 
-  font-family: 'Open Sans', sans-serif; 
+  font-family: Open Sans Condensed, sans-serif;
   color:inherit;
   background-color:inherit;
  font-size: 1rem;
