Added bottom nav bar for the mobile application. Also changed font styles.

--- a/client/styles/Menu.module.css
+++ b/client/styles/Menu.module.css
@@ -3,7 +3,7 @@
 .menu{
     background-color: white;
     color: black;
-    font-family: 'Style Script', cursive;
+    font-family: Calibri;
 }
 
 .navigateButtons{
