Made modifications to models, typedefs and resolvers to follow up uniform naming convention. Completed the login flow and added the required queries for it in the backend and frontend. Modified the title and tagline on home page. Changed footer position. Fixed the sign up header and only scrolled the form instead. Changed the applications global font to Comfortaa. Added functionality to add the menu items using local storage state array memory.

--- a/client/styles/Login.module.css
+++ b/client/styles/Login.module.css
@@ -2,6 +2,13 @@
 	font-family: 'pizzafont';
 	src: url("../public/text/hotpizza.ttf");
 }
+.heading{
+    position: sticky;
+    top: 0;
+    padding: 20px;
+    z-index: 999;
+    background-color: white;
+}
 
 .loginWrap {
     height: 90vh;
