--- a/client/styles/SignUp.module.css
+++ b/client/styles/SignUp.module.css
@@ -1,3 +1,10 @@
+.heading{
+    position: sticky;
+    top: 0;
+    padding: 20px;
+    z-index: 999;
+    background-color: white;
+}
 
 .formLabel{
     color:white;
